fixed issue were recipe buttons did not align

--- a/src/app/recipe-list-page.component.css
+++ b/src/app/recipe-list-page.component.css
@@ -4,7 +4,7 @@ h5 {
 
 .card {
     box-shadow: 10px 10px 10px #EBEBEB;
-    width: 18rem;
+    width: 20rem;
     height: 22rem;
 }
 
